Fixed stress test values to stick even if there is an error returned from backend

--- a/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
+++ b/nicnbk-ui-angular2/src/app/monitoring/view/monitoring-risk-hf.component.html
@@ -242,7 +242,7 @@
     <br/>
 
     <!-- STRESS TESTS -->
-    <div class="row" [hidden]="selectedDateMonitoringInfo == null">
+    <div class="row">
         <div class="col-md-12">
             <div class="alert alert-danger small" *ngIf="selectedDateMonitoringInfo?.stressTestsError != null">
                 <span>{{selectedDateMonitoringInfo?.stressTestsError}}</span>
