--- a/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-edit.component.html
+++ b/nicnbk-ui-angular2/src/app/corpmeetings/view/corp-meeting-edit.component.html
@@ -47,7 +47,7 @@
                                 <label class="control-label col-md-1" for="questionName">Name:</label>
                                 <div class="col-md-11">
                                     <textarea fz-elastic type="text" id="questionName" class="form-control"
-``                                              placeholder="Enter question name (will be added to IC Protocol)..." name="questionName" [(ngModel)]="icMeetingTopic.name"></textarea>
+                                              placeholder="Enter question name (will be added to IC Protocol)..." name="questionName" [(ngModel)]="icMeetingTopic.name"></textarea>
                                 </div>
                             </div>
                         </div>
