--- a/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
+++ b/nicnbk-ui-angular2/src/app/common/view/file-attachment-downloader.component.html
@@ -1,4 +1,4 @@
-<a (click)="download()" style="cursor: pointer">
+<a *ngIf="mimeType == null || mimeType != 'application/pdf'" (click)="download()" style="cursor: pointer">
     <small><span *ngIf="showIcon" class="glyphicon glyphicon-file" style="font-size:15px"></span></small>
     <div *ngIf="showIcon" class="row" style="font-size:10px">
         {{displayFileName != null ? displayFileName : fileName}}
@@ -6,6 +6,18 @@
     <div *ngIf="!showIcon" class="row withpadding pull-right">
         {{displayFileName != null ? displayFileName : fileName}}
     </div>
-    <!--<i class="glyphicon glyphicon-download-alt" *ngIf="!pending"></i>-->
+    <i class="glyphicon glyphicon-refresh" *ngIf="pending"></i>
+</a>
+
+
+<a *ngIf="mimeType != null && mimeType === 'application/pdf'" style="cursor: pointer" target="_blank"
+                    [attr.href]="'http://localhost:8089/files/open/' + fileType + '/' + fileId">
+    <small><span *ngIf="showIcon" class="glyphicon glyphicon-file" style="font-size:15px"></span></small>
+    <div *ngIf="showIcon" class="row" style="font-size:10px">
+        {{displayFileName != null ? displayFileName : fileName}}
+    </div>
+    <div *ngIf="!showIcon" class="row withpadding pull-right">
+        {{displayFileName != null ? displayFileName : fileName}}
+    </div>
     <i class="glyphicon glyphicon-refresh" *ngIf="pending"></i>
 </a>
