--- a/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
+++ b/nicnbk-ui-angular2/src/app/employee/view/employee.profile.admin.component.html
@@ -73,6 +73,13 @@
             </div>
         </div>
         <div class="row form-group">
+            <label class="control-label col-sm-2">Email:</label>
+            <div class="col-sm-10">
+                <input type="email" class="form-control" [(ngModel)]="employee.email"/>
+            </div>
+        </div>
+
+        <div class="row form-group">
             <label class="control-label col-sm-2">Date of birth:</label>
             <div class="col-sm-3">
                 <div class='input-group date col-md-2' id='birthDatePicker' style="width: 100%">
